--- a/src/common/utility/loader/loader-style.css
+++ b/src/common/utility/loader/loader-style.css
@@ -1,8 +1,15 @@
-.col-sm-2 {
-    padding: 10px;
+.loader-container {
+    /* padding: 10px;
     border-radius: 4px;
     height: 125px;
-    margin-bottom: 10px;
+    margin-bottom: 10px; */
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-color: #80808038;
+      width: 100%;
+      height: 100%;
+      z-index: 999;
   }
   
   .sp {
