--- a/src/components/route-info/route-style.css
+++ b/src/components/route-info/route-style.css
@@ -26,3 +26,11 @@
     background-color: #000;
 }
 
+.inline-error{
+    color:red;
+}
+
+.label-header{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin:3px;
+}
