adding remove img with fields and validation changes.

--- a/src/components/route-info/route-style.css
+++ b/src/components/route-info/route-style.css
@@ -34,3 +34,7 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin:3px;
 }
+
+.float-right{
+    float:right;
+}
